# ChangeLog for net-wireless/bluez
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/bluez/ChangeLog,v 1.133 2012/05/04 06:41:53 jdhore Exp $

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> bluez-4.96.ebuild,
  bluez-4.98-r2.ebuild, bluez-4.99.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  15 Apr 2012; Markus Meier <maekke@gentoo.org> bluez-4.99.ebuild:
  arm stable, bug #411015

  11 Apr 2012; Jeff Horelick <jdhore@gentoo.org> bluez-4.99.ebuild:
  marked x86 per bug 411015

  11 Apr 2012; Jeroen Roovers <jer@gentoo.org> bluez-4.99.ebuild:
  Stable for HPPA (bug #411015).

  10 Apr 2012; Agostino Sarubbo <ago@gentoo.org> bluez-4.99.ebuild:
  Stable for amd64, wrt bug #411015

  06 Apr 2012; Samuli Suominen <ssuominen@gentoo.org> bluez-4.99.ebuild:
  Both hid2hci and dfutool are still using libusb-0.1 (virtual/libusb:0) wrt
  #411045

*bluez-4.99 (08 Mar 2012)

  08 Mar 2012; Pacho Ramos <pacho@gentoo.org> +bluez-4.99.ebuild,
  -bluez-4.98-r1.ebuild:
  Version bump, remove old.

  29 Feb 2012; Markus Meier <maekke@gentoo.org> bluez-4.98-r2.ebuild:
  arm stable, bug #399745

  25 Feb 2012; Samuli Suominen <ssuominen@gentoo.org> bluez-4.98-r2.ebuild:
  ppc/ppc64 stable wrt #399745

  24 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> bluez-4.98-r2.ebuild:
  x86 stable wrt bug #399745

  22 Feb 2012; Jeroen Roovers <jer@gentoo.org> bluez-4.98-r2.ebuild:
  Stable for HPPA (bug #399745).

  21 Feb 2012; Agostino Sarubbo <ago@gentoo.org> bluez-4.98-r2.ebuild:
  Stable for amd64, wrt bug #399745

*bluez-4.98-r2 (14 Feb 2012)

  14 Feb 2012; Pacho Ramos <pacho@gentoo.org> +bluez-4.98-r2.ebuild,
  +files/bluez-4.98-fix-header.patch, +files/bluez-4.98-fix-socket.patch,
  -bluez-4.98.ebuild:
  Fix compilation problems against bluez, bug #403341 (by Steev Klimaszewski and
  Marcel Unbehaun); fix needing to enable socket, bug #401065 (by Andreas