@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/bluez/bluez-4.98-r2.ebuild,v 1.7 2012/05/04 06:41:53 jdhore Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/bluez/bluez-4.98-r2.ebuild,v 1.8 2012/05/22 16:16:32 ssuominen Exp $
 
 EAPI="4"
 PYTHON_DEPEND="test-programs? 2"
@@ -36,7 +36,7 @@ CDEPEND="
 		>=media-libs/gstreamer-0.10:0.10
 		>=media-libs/gst-plugins-base-0.10:0.10
 	)
-	usb? ( dev-libs/libusb:1 )
+	usb? ( virtual/libusb:1 )
 	readline? ( sys-libs/readline )
 "
 DEPEND="${CDEPEND}
