@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/kismet
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/kismet/ChangeLog,v 1.113 2012/05/22 00:57:53 steev Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/kismet/ChangeLog,v 1.114 2012/05/22 16:19:41 ssuominen Exp $
+
+  22 May 2012; Samuli Suominen <ssuominen@gentoo.org>
+  kismet-2011.03.2-r1.ebuild, kismet-2011.03.2-r2.ebuild:
+  Use virtual/libusb instead of dev-libs/libusb.
 
 *kismet-2011.03.2-r2 (22 May 2012)
 
