@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/bluez
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/bluez/ChangeLog,v 1.133 2012/05/04 06:41:53 jdhore Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/bluez/ChangeLog,v 1.134 2012/05/22 16:16:32 ssuominen Exp $
+
+  22 May 2012; Samuli Suominen <ssuominen@gentoo.org> bluez-4.96.ebuild,
+  bluez-4.98-r2.ebuild:
+  Use virtual/libusb instead of dev-libs/libusb.
 
   04 May 2012; Jeff Horelick <jdhore@gentoo.org> bluez-4.96.ebuild,
   bluez-4.98-r2.ebuild, bluez-4.99.ebuild:
